--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 .singles{font-style: italic;
          font-weight: bold;}
 section>article>h2{color:red}
-footer{text-align: left;}
+footer{text-align: right;}
 
 
 
